--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,12 @@ keywords = [
     "dask",
 ]
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"*" = ["checkpoints/*.pt", "configs/sam2.1/*.yaml"]
+
 dependencies = [
     "numpy>=1.20",
     "opencv-python",
